--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 dvc[gs]==3.18.1
+dvc-objects==3.0.4
+dvc-data==3.4.4
+dvc-render==1.0.1
+dvc-task==0.3.1
+dvc-http==2.30.2
+scikit-learn==1.3.2
 pandas==1.5.3
-scikit-learn==1.3.0
-numpy==1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
-google-cloud-storage==2.10.0
-google-cloud-aiplatform==1.35.0
-mlflow==2.7.1
-feast==0.34.0
-pytest==7.4.2
-
+pyarrow==11.0.0
+mlflow==2.10.2
+cml==0.5.9
