--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-dvc[gs]==3.50.1
+dvc[gs]==3.18.1
+dvc-objects==3.0.4
+dvc-data==3.4.4
+dvc-render==1.0.1
+dvc-task==0.3.1
+dvc-http==2.30.2
 scikit-learn==1.3.2
 pandas==1.5.3
 pyarrow==11.0.0
