--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
+    - name: Install DVC and dependencies
       run: |
         python -m pip install --upgrade pip
         pip install "dvc[gs]==3.50.1"
