--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-
 pandas==1.5.3
 scikit-learn==1.3.0
-numpy==1.24.3
+numpy==1.26.4
 matplotlib==3.7.2
 seaborn==0.12.2
 google-cloud-storage==2.10.0
@@ -9,3 +8,6 @@ google-cloud-aiplatform==1.35.0
 mlflow==2.7.1
 feast==0.34.0
 pytest==7.4.2
+flask==2.3.3
+gunicorn==21.2.0
+joblib==1.3.2
